@@ -337,8 +337,6 @@ abstract class MemorySegmentIndexInput extends IndexInput
 
     ensureOpen();
 
-    Objects.checkFromIndexSize(offset, length, length());
-
     if (BitUtil.isZeroOrPowerOfTwo(consecutivePrefetchHitCount++) == false) {
       // We've had enough consecutive hits on the page cache that this number is neither zero nor a
       // power of two. There is a good chance that a good chunk of this index input is cached in
@@ -380,8 +378,6 @@ abstract class MemorySegmentIndexInput extends IndexInput
     }
 
     ensureOpen();
-
-    Objects.checkFromIndexSize(offset, length, length());
 
     final NativeAccess nativeAccess = NATIVE_ACCESS.get();
 
@@ -818,6 +814,12 @@ abstract class MemorySegmentIndexInput extends IndexInput
         throw handlePositionalIOOBE(e, "segmentSliceOrNull", pos);
       }
     }
+
+    @Override
+    public void prefetch(long offset, long length) throws IOException {
+      Objects.checkFromIndexSize(offset, length, this.length);
+      super.prefetch(offset, length);
+    }
   }
 
   /** This class adds offset support to MemorySegmentIndexInput, which is needed for slices. */
@@ -902,6 +904,12 @@ abstract class MemorySegmentIndexInput extends IndexInput
     @Override
     MemorySegmentIndexInput buildSlice(String sliceDescription, long ofs, long length) {
       return super.buildSlice(sliceDescription, this.offset + ofs, length);
+    }
+
+    @Override
+    public void prefetch(long offset, long length) throws IOException {
+      Objects.checkFromIndexSize(offset, length, this.length);
+      super.prefetch(this.offset + offset, length);
     }
   }
 }
